--- a/LBL Sender.vbproj
+++ b/LBL Sender.vbproj
@@ -80,7 +80,14 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="LBLClientDownload.vb" />
     <Compile Include="LBLClientTransfer.vb" />
+    <Compile Include="LBLReceiver.Designer.vb">
+      <DependentUpon>LBLReceiver.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LBLReceiver.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LBLSender.Designer.vb">
       <DependentUpon>LBLSender.vb</DependentUpon>
     </Compile>
@@ -107,6 +114,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LBLReceiver.resx">
+      <DependentUpon>LBLReceiver.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LBLSender.resx">
       <DependentUpon>LBLSender.vb</DependentUpon>
@@ -135,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\CertificationCheck.png" />
+    <Content Include="Resources\FileIn.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
